# MARIGOLD

./: .gitignore  README.md  build_and_deploy.bat  build_and_host_docs.sh  build_docs.bat  local_install.bat  pyproject.toml  setup.cfg
analysis/: U-bend_plotting.ipynb  jf_4_0_jgloc_0_33_theta_90_port_P1_adix_pdf  jf_4_0_jgloc_0_36_theta_90_port_P2_adix_pdf  jf_4_0_jgloc_0_39_theta_-90_port_P10_adix_pdf  jf_4_0_jgloc_0_39_theta_90_port_P3_adix_pdf  jf_4_0_jgloc_0_40_theta_-90_port_P5_adix_pdf  jf_4_0_jgloc_0_40_theta_-90_port_P6_adix_pdf  jf_4_0_jgloc_0_40_theta_-90_port_P7_adix_pdf  jf_4_0_jgloc_0_40_theta_-90_port_P8_adix_pdf  jf_4_0_jgloc_0_40_theta_-90_port_P9_adix_pdf  jf_4_0_jgloc_0_40_theta_90_port_P4_adix_pdf  python_environment.txt
analysis/15dec25/: analysis_nexus.ipynb  cfd_master.ipynb  iate_master.ipynb  signalquality_master.ipynb
docs/: google_sphinx.mustache
docs/source/: MARIGOLD.rst  conf.py  examples.rst  index.rst
examples/: example_analysis.ipynb  signal_analysis.ipynb  vertical_vr_analysis.ipynb
examples/example_iate_stations/: iate_station.ipynb  iate_station_bettis.ipynb  iate_station_bettis_contributions.ipynb  iate_station_general.ipynb  iate_station_pita.ipynb  iate_station_pita_compare_alpha.ipynb  iate_station_pita_ubend.ipynb  iate_station_talley.ipynb  iate_station_talley_prelegacy.ipynb  iate_station_talley_transition.ipynb
examples/example_sheets/: 90deg_jf0.75_jg0.10_P3.xlsm  90deg_jf1.03_jg0.156_P3.xlsm  90deg_jf1.0_jg0.11_P3.xlsm
src/MARIGOLD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+56 files in other folders)
